--- a/index.html
+++ b/index.html
@@ -60,188 +60,39 @@
 							</section>
 
 						</div>
-						<div class="4u 12u(mobile)">
 
-							<section>
-								<h2>Who are you guys?</h2>
-								<ul class="small-image-list">
-									<li>
-										<a href="#"><img src="images/pic2.jpg" alt="" class="left" /></a>
-										<h4>Jane Anderson</h4>
-										<p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo facilisis amet quis.</p>
-									</li>
-									<li>
-										<a href="#"><img src="images/pic1.jpg" alt="" class="left" /></a>
-										<h4>James Doe</h4>
-										<p>Vitae magna eget odio amet mollis justo facilisis amet quis. Sed sagittis consequat.</p>
-									</li>
-								</ul>
-							</section>
 
-						</div>
-						<div class="4u 12u(mobile)">
-
-							<section>
-								<h2>How about some links?</h2>
-								<div>
-									<div class="row">
-										<div class="6u 12u(mobile)">
-											<ul class="link-list">
-												<li><a href="#">Sed neque nisi consequat</a></li>
-												<li><a href="#">Dapibus sed mattis blandit</a></li>
-												<li><a href="#">Quis accumsan lorem</a></li>
-												<li><a href="#">Suspendisse varius ipsum</a></li>
-												<li><a href="#">Eget et amet consequat</a></li>
-											</ul>
-										</div>
-										<div class="6u 12u(mobile)">
-											<ul class="link-list">
-												<li><a href="#">Quis accumsan lorem</a></li>
-												<li><a href="#">Sed neque nisi consequat</a></li>
-												<li><a href="#">Eget et amet consequat</a></li>
-												<li><a href="#">Dapibus sed mattis blandit</a></li>
-												<li><a href="#">Vitae magna sed dolore</a></li>
-											</ul>
-										</div>
-									</div>
-								</div>
-							</section>
-
-						</div>
 					</div>
-					<div class="row main-row">
-						<div class="6u 12u(mobile)">
 
-							<section>
-								<h2>An assortment of pictures and text</h2>
-								<p>Duis neque nisi, dapibus sed mattis quis, rutrum et accumsan.
-								Suspendisse nibh. Suspendisse vitae magna eget odio amet mollis
-								justo facilisis quis. Sed sagittis mauris amet tellus gravida
-								lorem ipsum dolor sit amet consequat blandit lorem ipsum dolor
-								sit amet consequat sed dolore.</p>
-								<ul class="big-image-list">
-									<li>
-										<a href="#"><img src="images/pic3.jpg" alt="" class="left" /></a>
-										<h3>Magna Gravida Dolore</h3>
-										<p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo
-										facilisis amet quis consectetur in, sollicitudin vitae justo. Cras
-										Maecenas eu arcu purus, phasellus fermentum elit.</p>
-									</li>
-									<li>
-										<a href="#"><img src="images/pic4.jpg" alt="" class="left" /></a>
-										<h3>Magna Gravida Dolore</h3>
-										<p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo
-										facilisis amet quis consectetur in, sollicitudin vitae justo. Cras
-										Maecenas eu arcu purus, phasellus fermentum elit.</p>
-									</li>
-									<li>
-										<a href="#"><img src="images/pic5.jpg" alt="" class="left" /></a>
-										<h3>Magna Gravida Dolore</h3>
-										<p>Varius nibh. Suspendisse vitae magna eget et amet mollis justo
-										facilisis amet quis consectetur in, sollicitudin vitae justo. Cras
-										Maecenas eu arcu purus, phasellus fermentum elit.</p>
-									</li>
-								</ul>
-							</section>
-
-						</div>
-						<div class="6u 12u(mobile)">
-
-							<article class="blog-post">
-								<h2>Just another blog post</h2>
-								<a class="comments" href="#">33 comments</a>
-								<a href="#"><img src="images/pic6.jpg" alt="" class="top blog-post-image" /></a>
-								<h3>Magna Gravida Dolore</h3>
-								<p>Aenean non massa sapien. In hac habitasse platea dictumst.
-								Maecenas sodales purus et nulla sodales aliquam. Aenean ac
-								porttitor metus. In hac habitasse platea dictumst. Phasellus
-								blandit turpis in leo scelerisque mollis. Nulla venenatis
-								ipsum nec est porta rhoncus. Mauris sodales sed pharetra
-								nisi nec consectetur. Cras elit magna, hendrerit nec
-								consectetur in, sollicitudin vitae justo. Cras amet aliquet
-								Aliquam ligula turpis, feugiat id fermentum malesuada,
-								rutrum eget turpis. Mauris sodales sed pharetra nisi nec
-								consectetur. Cras elit magna, hendrerit nec consectetur
-								in sollicitudin vitae.</p>
-								<footer class="controls">
-									<a href="#" class="button">Continue Reading</a>
-								</footer>
-							</article>
-
-						</div>
-					</div>
 				</div>
 			</div>
 			<div id="footer-wrapper">
 				<div class="container">
 					<div class="row">
-						<div class="8u 12u(mobile)">
+						<h2>Contact Us</h2>
+						<div class="6u 12u(mobile)">
 
 							<section>
-								<h2>How about a truckload of links?</h2>
-								<div>
-									<div class="row">
-										<div class="3u 12u(mobile)">
-											<ul class="link-list">
-												<li><a href="#">Sed neque nisi consequat</a></li>
-												<li><a href="#">Dapibus sed mattis blandit</a></li>
-												<li><a href="#">Quis accumsan lorem</a></li>
-												<li><a href="#">Suspendisse varius ipsum</a></li>
-												<li><a href="#">Eget et amet consequat</a></li>
-											</ul>
-										</div>
-										<div class="3u 12u(mobile)">
-											<ul class="link-list">
-												<li><a href="#">Quis accumsan lorem</a></li>
-												<li><a href="#">Sed neque nisi consequat</a></li>
-												<li><a href="#">Eget et amet consequat</a></li>
-												<li><a href="#">Dapibus sed mattis blandit</a></li>
-												<li><a href="#">Vitae magna sed dolore</a></li>
-											</ul>
-										</div>
-										<div class="3u 12u(mobile)">
-											<ul class="link-list">
-												<li><a href="#">Sed neque nisi consequat</a></li>
-												<li><a href="#">Dapibus sed mattis blandit</a></li>
-												<li><a href="#">Quis accumsan lorem</a></li>
-												<li><a href="#">Suspendisse varius ipsum</a></li>
-												<li><a href="#">Eget et amet consequat</a></li>
-											</ul>
-										</div>
-										<div class="3u 12u(mobile)">
-											<ul class="link-list">
-												<li><a href="#">Quis accumsan lorem</a></li>
-												<li><a href="#">Sed neque nisi consequat</a></li>
-												<li><a href="#">Eget et amet consequat</a></li>
-												<li><a href="#">Dapibus sed mattis blandit</a></li>
-												<li><a href="#">Vitae magna sed dolore</a></li>
-											</ul>
-										</div>
-									</div>
-								</div>
+								<p> Mailing address: 330 N Orchard St, Madison, WI 53715, United States <\p>
+								<p>	Office location: WID 3268 <\p>
 							</section>
 
 						</div>
-						<div class="4u 12u(mobile)">
+						<div class="6u 12u(mobile)">
 
 							<section>
-								<h2>Something of interest</h2>
-								<p>Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed.
-								Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet
-								mollis justo facilisis quis. Sed sagittis mauris amet tellus gravida
-								lorem ipsum dolor sit amet consequat blandit.</p>
-								<footer class="controls">
-									<a href="#" class="button">Oh, please continue ....</a>
-								</footer>
+								<p> Email: tang@biostat.wisc.edu <\p>
+								<p>	Office phone: (608) 316-4442 <\p>
 							</section>
 
 						</div>
+
 					</div>
 					<div class="row">
 						<div class="12u">
 
 							<div id="copyright">
-								&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a>
+								&copy; ZhengZheng Tang 2017. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a> | Last updated July 1, 2017
 							</div>
 
 						</div>
