--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 						<div class="12u">
 
 							<header id="header">
-								<h1><a href="#" id="logo">Minimaxing</a></h1>
+								<h1><a href="#" id="logo"><font style="text-transform: none;"> Tang Lab </font></a></h1>
 								<nav id="nav">
-									<a href="index.html" class="current-page-item">Homepage</a>
-									<a href="twocolumn1.html">Two Column #1</a>
-									<a href="twocolumn2.html">Two Column #2</a>
-									<a href="onecolumn.html">One Column</a>
-									<a href="threecolumn.html">Three Column</a>
+									<a href="index.html" class="current-page-item"><font style="text-transform: none;"> Home </font></a>
+									<a href="twocolumn1.html"><font style="text-transform: none;"> Research </font></a>
+									<a href="twocolumn2.html"><font style="text-transform: none;"> Publications </font></a>
+									<a href="onecolumn.html"><font style="text-transform: none;"> Software </font></a>
+									<a href="threecolumn.html"><font style="text-transform: none;"> People </font></a>
 								</nav>
 							</header>
 
@@ -39,8 +39,8 @@
 				<div class="container">
 
 					<div id="banner">
-						<h2>Put something cool here!</h2>
-						<span>And put something almost as cool here, but a bit longer ...</span>
+						<h2><font style="text-transform: none;"> Genomics and Metagenomics </font></h2>
+						<span><font style="text-transform: none;"> Developing Statistical Methods and Computational Tools </font></span>
 					</div>
 
 				</div>
@@ -48,15 +48,13 @@
 			<div id="main">
 				<div class="container">
 					<div class="row main-row">
-						<div class="4u 12u(mobile)">
+						<div class="12u 12u(mobile)">
 
 							<section>
-								<h2>Welcome to Minimaxing!</h2>
-								<p>This is <strong>Minimaxing</strong>, a fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> and released for free by <a href="http://html5up.net">HTML5 UP</a>. It features
-								a simple, lightweight design, solid HTML5 and CSS3 code, and full responsive support for desktop, tablet, and mobile displays.</p>
-								<footer class="controls">
-									<a href="http://html5up.net" class="button">More cool designs ...</a>
-								</footer>
+								<h2>Welcome!</h2>
+								<p> ZhengZheng (Jane) Tang is an Assistant Professor at the University of Wisconsin-Madison and Wisconsin Discovery Institute. </p>
+
+								<p> Dr. Tang's research focuses on the development and application of statistical methods and computational tools for high-dimensional "omics" data, arising from modern high-throughput technologies. The current research in Tang's group has focused on developing novel methods for gene-based association analysis, meta-analysis for sequencing studies, integration of genomics with electronic medical records, and the analysis of microbiome & metagenomic data.</p>
 							</section>
 
 						</div>
