--- a/index.html
+++ b/index.html
@@ -66,21 +66,23 @@
 			</div>
 			<div id="footer-wrapper">
 				<div class="container">
+					<h2>Contact Us</h2>
+					
 					<div class="row">
-						<h2>Contact Us</h2>
+						
 						<div class="6u 12u(mobile)">
 
 							<section>
-								<p> Mailing address: 330 N Orchard St, Madison, WI 53715, United States <\p>
-								<p>	Office location: WID 3268 <\p>
+								<p> Mailing address: 330 N Orchard St, Madison, WI 53715, United States </p>
+								<p>	Office location: WID 3268 </p>
 							</section>
 
 						</div>
 						<div class="6u 12u(mobile)">
 
 							<section>
-								<p> Email: tang@biostat.wisc.edu <\p>
-								<p>	Office phone: (608) 316-4442 <\p>
+								<p> Email: tang@biostat.wisc.edu </p>
+								<p>	Office phone: (608) 316-4442 </p>
 							</section>
 
 						</div>
