--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 								<nav id="nav">
 									<a href="index.html" class="current-page-item"><font style="text-transform: none;"> Home </font></a>
 									<a href="twocolumn1.html"><font style="text-transform: none;"> Research </font></a>
-									<a href="Publications.html"><font style="text-transform: none;"> Publications </font></a>
+									<a href="publications.html"><font style="text-transform: none;"> Publications </font></a>
 									<a href="onecolumn.html"><font style="text-transform: none;"> Software </font></a>
 									<a href="threecolumn.html"><font style="text-transform: none;"> People </font></a>
 								</nav>
