--- a/onecolumn.html
+++ b/onecolumn.html
@@ -26,7 +26,7 @@
 									<a href="index.html" class="current-page-item"><font style="text-transform: none;"> Home </font></a>
 									<a href="twocolumn1.html"><font style="text-transform: none;"> Research </font></a>
 									<a href="twocolumn2.html"><font style="text-transform: none;"> Publications </font></a>
-									<a href="onecolumn.html"><font style="text-transform: none;"> Software </font></a>
+									<a href="onecolumn.html" class="current-page-item"><font style="text-transform: none;"> Software </font></a>
 									<a href="threecolumn.html"><font style="text-transform: none;"> People </font></a>
 								</nav>
 							</header>
