--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,7 @@
 									<a href="index.html">Homepage</a>
 									<a href="twocolumn1.html">Two Column #1</a>
 									<a href="twocolumn2.html">Two Column #2</a>
-									<a href="onecolumn.html" class="current-page-item">One Column</a>
+									<a href="publications.html" class="current-page-item">One Column</a>
 									<a href="threecolumn.html">Three Column</a>
 								</nav>
 							</header>
