--- a/publications.html
+++ b/publications.html
@@ -21,13 +21,13 @@
 						<div class="12u">
 
 							<header id="header">
-								<h1><a href="#" id="logo">Minimaxing</a></h1>
+								<h1><a href="#" id="logo"><font style="text-transform: none;"> Tang Lab </font></a></h1>
 								<nav id="nav">
-									<a href="index.html">Homepage</a>
-									<a href="twocolumn1.html">Two Column #1</a>
-									<a href="twocolumn2.html">Two Column #2</a>
-									<a href="publications.html" class="current-page-item">One Column</a>
-									<a href="threecolumn.html">Three Column</a>
+									<a href="index.html"><font style="text-transform: none;"> Home </font></a>
+									<a href="research.html"><font style="text-transform: none;"> Research </font></a>
+									<a href="publications.html" class="current-page-item"><font style="text-transform: none;"> Publications </font></a>
+									<a href="software.html"><font style="text-transform: none;"> Software </font></a>
+									<a href="people.html"><font style="text-transform: none;"> People </font></a>
 								</nav>
 							</header>
 
@@ -40,11 +40,18 @@
 					<div class="row main-row">
 						<div class="12u">
 
+						<h2>Software</h2>
+						
 							<section>
-								<h2>One Column (no sidebar)</h2>
-								<p>This is the second generic interior page. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ante ante, viverra a ornare sed, convallis sed est. Proin felis sapien, adipiscing quis eleifend vel, sodales vitae sapien. Donec vel lacus leo, eu convallis metus. Cras egestas feugiat tortor, vitae interdum augue aliquam a. Sed nec augue id orci egestas commodo in eget magna. Nunc eleifend diam non odio laoreet placerat gravida nulla bibendum. Phasellus tempus imperdiet suscipit.</p>
-								<p>Mauris risus nulla, pulvinar vitae sagittis a, pharetra nec tellus. Suspendisse varius enim ac felis mattis aliquam. Aenean et justo quis ipsum gravida lacinia. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacinia bibendum cursus. Nullam nec pellentesque lacus. In porta erat in tortor rhoncus quis accumsan magna pretium. Nulla posuere magna eget mauris lacinia in mollis sem fermentum. Donec mollis adipiscing mauris, ut posuere enim rhoncus ut. Nunc commodo vestibulum orci vel placerat. Cras sed risus libero. Donec ac lacus vitae lectus mattis commodo id vitae libero. Etiam lorem odio, volutpat nec pulvinar sit amet, tincidunt ut lacus. Pellentesque consequat arcu vel nisi lobortis in pellentesque orci sollicitudin. Cras gravida lacus turpis, consectetur porttitor lectus. Cras malesuada tortor id neque porta ut semper quam iaculis.</p>
-								<p>Nulla ut tortor quam, a luctus nunc. Nulla condimentum diam porttitor arcu placerat tincidunt. Nunc non augue ipsum. Nulla facilisi. Phasellus feugiat augue in ipsum egestas semper. Suspendisse blandit, nisl ullamcorper blandit sollicitudin, sem leo auctor lectus, et volutpat mauris elit et odio. Ut elementum risus in metus mollis tristique vulputate nulla interdum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vitae orci dui, ut facilisis dui.</p>
+								<p><strong>miLineage</strong> </p>
+								<p> miLineage package has functions that implement the distribution-free association tests for microbiome data described in Tang et al. (2016). These functions allow users to: (a) perform robust association tests at any taxonomic level for microbiome data that exhibit arbitrary inter-taxa correlation; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community. Our framework does not make any distributional assumptions on the microbiome data; it allows for the adjustment of confounding variables and accommodates excessive zero observations; and it incorporates taxonomic information. Simulation studies and real data analyses demonstrate substantial power gain over competing methods. </p>
+							    <p> Download miLineage (include a zipped file for the R package, a manual, and a tutorial ) </p>
+							</section>
+							
+							<section>
+								<p><strong>miLineage</strong> </p>
+								<p> miLineage package has functions that implement the distribution-free association tests for microbiome data described in Tang et al. (2016). These functions allow users to: (a) perform robust association tests at any taxonomic level for microbiome data that exhibit arbitrary inter-taxa correlation; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community. Our framework does not make any distributional assumptions on the microbiome data; it allows for the adjustment of confounding variables and accommodates excessive zero observations; and it incorporates taxonomic information. Simulation studies and real data analyses demonstrate substantial power gain over competing methods. </p>
+							    <p> Download miLineage (include a zipped file for the R package, a manual, and a tutorial ) </p>
 							</section>
 
 						</div>
