--- a/software.html
+++ b/software.html
@@ -23,11 +23,11 @@
 							<header id="header">
 								<h1><a href="#" id="logo"><font style="text-transform: none;"> Tang Lab </font></a></h1>
 								<nav id="nav">
-									<a href="index.html" class="current-page-item"><font style="text-transform: none;"> Home </font></a>
-									<a href="twocolumn1.html"><font style="text-transform: none;"> Research </font></a>
-									<a href="twocolumn2.html"><font style="text-transform: none;"> Publications </font></a>
+									<a href="index.html"><font style="text-transform: none;"> Home </font></a>
+									<a href="research.html"><font style="text-transform: none;"> Research </font></a>
+									<a href="publications.html"><font style="text-transform: none;"> Publications </font></a>
 									<a href="software.html" class="current-page-item"><font style="text-transform: none;"> Software </font></a>
-									<a href="threecolumn.html"><font style="text-transform: none;"> People </font></a>
+									<a href="people.html"><font style="text-transform: none;"> People </font></a>
 								</nav>
 							</header>
 
