--- a/publications.html
+++ b/publications.html
@@ -42,17 +42,45 @@
 
 						<h2>Software</h2>
 						
-							<section>
-								<p><strong>miLineage</strong> </p>
-								<p> miLineage package has functions that implement the distribution-free association tests for microbiome data described in Tang et al. (2016). These functions allow users to: (a) perform robust association tests at any taxonomic level for microbiome data that exhibit arbitrary inter-taxa correlation; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community. Our framework does not make any distributional assumptions on the microbiome data; it allows for the adjustment of confounding variables and accommodates excessive zero observations; and it incorporates taxonomic information. Simulation studies and real data analyses demonstrate substantial power gain over competing methods. </p>
-							    <p> Download miLineage (include a zipped file for the R package, a manual, and a tutorial ) </p>
-							</section>
-							
-							<section>
-								<p><strong>miLineage</strong> </p>
-								<p> miLineage package has functions that implement the distribution-free association tests for microbiome data described in Tang et al. (2016). These functions allow users to: (a) perform robust association tests at any taxonomic level for microbiome data that exhibit arbitrary inter-taxa correlation; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community. Our framework does not make any distributional assumptions on the microbiome data; it allows for the adjustment of confounding variables and accommodates excessive zero observations; and it incorporates taxonomic information. Simulation studies and real data analyses demonstrate substantial power gain over competing methods. </p>
-							    <p> Download miLineage (include a zipped file for the R package, a manual, and a tutorial ) </p>
-							</section>
+<p><strong>Tang ZZ</strong>, Bunn P,&nbsp;Tao R, Liu Z, Lin DY (2017). PreMeta: a tool to facilitate meta-analysis of rare-variant associations. <em>BMC Genomics</em>.&nbsp;accepted.</p>
+
+<p><strong>Tang ZZ</strong>, Chen G, Alekseyenko AV, Li H (2016). A general framework for association analysis of microbial communities on a taxonomic tree. <em>Bioinformatics</em>. btw804.</p>
+
+<p><strong>Tang ZZ</strong>,&nbsp;Chen G,&nbsp;Alekseyenko&nbsp;AV&nbsp;(2016). PERMANOVA-S:&nbsp;Association test for microbial community composition that accommodates confounders and multiple distances, <em>Bioinformatics</em>, btw311.</p>
+
+<p><strong>Tang ZZ</strong>, Lin DY (2015). Meta-analysis for discovering rare-variant&nbsp;associations: statistical methods and software programs,&nbsp;<em>American Journal of Human Genetics</em>, 97, 35-53.</p>
+
+<p>Stitziel NO, Won HH, Morrison AC, Peloso GM, Do R, ..., <strong>Tang ZZ</strong>, ..., Kathiresan S (2014)<br />
+Inactivating mutations in NPC1L1 and protection from coronary heart disease.&nbsp;<em>New England Journal of Medicine</em>,&nbsp;371(22):2072-2082.</p>
+
+<p><strong>Tang ZZ</strong>, Lin DY (2014). Meta-analysis of sequencing studies with heterogeneous genetic associations,&nbsp;<em>Genetic Epidemiology</em>,&nbsp;38(5):389-401.</p>
+
+<p><br />
+Crosby J, Peloso GM, Auer PL, Crosslin D, Stitziel NO, Lange LA, Lu K,&nbsp;<strong>Tang ZZ</strong>, ..., Reiner AP, Boerwinkle E, Kathiresan S (2014). Rare loss-of-function mutations in the APOC3 gene, plasma triglycerides, and risk for coronary heart disease,&nbsp;<em>New England Journal of Medicine</em>, 235(2):e30-e31.</p>
+
+<p><br />
+Lange LA, Hu Y, Zhang H, Xue C, Schmidt EM,&nbsp;<strong>Tang ZZ</strong>, ..., Willer CJ (2014). Novel rare and low frequency coding variants associated with LDL cholesterol,&nbsp;<em>American Journal of Human Genetics</em>, 94, 233-245.</p>
+
+<p><br />
+<strong>Tang ZZ</strong>, Lin DY (2013). MASS: meta-analysis of score statistics for sequencing studies,&nbsp;<em>Bioinformatics</em>, 29, 1803-1805.</p>
+
+<p><br />
+Lin DY, Zeng D,&nbsp;<strong>Tang ZZ</strong>&nbsp;(2013). Quantitative trait analysis in sequencing studies under trait-dependent sampling,&nbsp;<em>Proceedings of the National Academy of Sciences of the United States of America</em>, 110, 12247&ndash;12252</p>
+
+<p>Nelson MR, Wegmann D, Ehm MG, Kessner D, Jean PS, Verzilli C, Shen J,&nbsp;<strong>Tang Z</strong>, ..., Novembre J, Mooser V (2012). An abundance of rare functional variants in 202 drug target genes sequenced in 14,002 people,&nbsp;<em>Science</em>, 337, 100-104.</p>
+
+<p><br />
+Yang EY, Chambless L, Sharrett AR, Virani SS, Liu X,&nbsp;<strong>Tang Z</strong>, Boerwinkle E, Ballantyne CM, Nambi V (2012). Carotid arterial wall characteristics are associated with incident ischemic stroke but not coronary heart disease in the Atherosclerosis Risk in Communities (ARIC) study,&nbsp;<em>Stroke</em>, 43, 103-108.</p>
+
+<p><br />
+Lin DY,&nbsp;<strong>Tang ZZ</strong>&nbsp;(2011). A general framework for detecting disease associations with rare variants in sequencing studies,&nbsp;<em>American Journal of Human Genetics</em>, 89, 354-367.</p>
+
+<p><br />
+Yang EY, Nambi V,&nbsp;<strong>Tang Z</strong>, Virani SS, Boerwinkle E, Hoogeveen RC, Astor BC, Mosley TH, Coresh J, Chambless L, Ballantyne CM (2009). Clinical implications of JUPITER (Justification for the Use of statins in Prevention: an Intervention Trial Evaluating Rosuvastatin) in a U.S. population insights from the ARIC (Atherosclerosis Risk in Communities) study,&nbsp;<em>Journal of the American College of Cardiology</em>, 54, 2388-2395.</p>
+
+<p><br />
+Sun W, Wright FA,&nbsp;<strong>Tang Z</strong>, Nordgard SH, Van Loo P, Yu T, Kristensen VN, Perou CM (2009). Integrated study of copy number states and genotype calls using high-density SNP arrays,&nbsp;<em>Nucleic Acids Research</em>, 37, 5365-5377</p>
+
 
 						</div>
 					</div>
