--- a/publications.html
+++ b/publications.html
@@ -40,7 +40,7 @@
 					<div class="row main-row">
 						<div class="12u">
 
-						<h2>Software</h2>
+						<h2>Publications</h2>
 						
 <p><strong>Tang ZZ</strong>, Bunn P,&nbsp;Tao R, Liu Z, Lin DY (2017). PreMeta: a tool to facilitate meta-analysis of rare-variant associations. <em>BMC Genomics</em>.&nbsp;accepted.</p>
 
