--- a/software.html
+++ b/software.html
@@ -41,18 +41,51 @@
 						<div class="12u">
 
 						<h2>Software</h2>
-						
-							<section>
-								<p><strong>miLineage</strong> </p>
-								<p> miLineage package has functions that implement the distribution-free association tests for microbiome data described in Tang et al. (2016). These functions allow users to: (a) perform robust association tests at any taxonomic level for microbiome data that exhibit arbitrary inter-taxa correlation; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community. Our framework does not make any distributional assumptions on the microbiome data; it allows for the adjustment of confounding variables and accommodates excessive zero observations; and it incorporates taxonomic information. Simulation studies and real data analyses demonstrate substantial power gain over competing methods. </p>
-							    <p> Download miLineage (include a zipped file for the R package, a manual, and a tutorial ) </p>
-							</section>
+						<p>miLineage: An R package&nbsp;to perform&nbsp;association tests for microbial&nbsp;lineages&nbsp;on a taxonomic tree</p>
+
+<p>https://medschool.vanderbilt.edu/tang-lab/software/miLineage</p>
+
+<p>citation: Tang ZZ, Chen G, Alekseyenko AV, Li H (2016). A general framework for association analysis of microbial communities on a taxonomic tree.&nbsp;Bioinformatics. btw804.</p>
+
+<p>&nbsp;</p>
+
+<p>miProfile: A C program for analyzing&nbsp;microbial community composition</p>
+
+<p>https://medschool.vanderbilt.edu/tang-lab/software/miProfile</p>
+
+<p>citation:&nbsp;Tang ZZ,&nbsp;Chen G,&nbsp;Alekseyenko&nbsp;AV&nbsp;(2016). PERMANOVA-S:&nbsp;Association test for microbial community composition that accommodates confounders and multiple distances,&nbsp;Bioinformatics, btw311.</p>
+
+<p>&nbsp;</p>
+
+<p>PreMeta: A C program to&nbsp;facilitate the exchange of information between four software packages for meta-analysis of rare-variant associations: MASS, RAREMETAL, MetaSKAT, and seqMeta.</p>
+
+<p>http://dlin.web.unc.edu/software/premeta/</p>
+
+<p>&nbsp;</p>
+
+<p>MASS: A C program for the meta-analysis of sequencing studies.</p>
+
+<p>http://dlin.web.unc.edu/software/mass/</p>
+
+<p>&nbsp;</p>
+
+<p>SCORE-SeqTDS: A C program for analyzing primary and secondary traits in sequencing studies under trait- dependent sampling.</p>
+
+<p>http://dlin.web.unc.edu/software/score-seqtds/</p>
+
+<p>&nbsp;</p>
+
+<p>SCORE-Seq: A C program which implements score statistics for detecting disease associations with rare variants in sequencing studies.</p>
+
+<p>http://dlin.web.unc.edu/software/score-seq/</p>
+
+<p>&nbsp;</p>
+
+<p>genoCN: An R package for identifying copy number states and genotype calls using the SNP arrays data.</p>
+
+<p>https://www.bioconductor.org/packages/release/bioc/html/genoCN.html</p>
+
 							
-							<section>
-								<p><strong>miLineage</strong> </p>
-								<p> miLineage package has functions that implement the distribution-free association tests for microbiome data described in Tang et al. (2016). These functions allow users to: (a) perform robust association tests at any taxonomic level for microbiome data that exhibit arbitrary inter-taxa correlation; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community. Our framework does not make any distributional assumptions on the microbiome data; it allows for the adjustment of confounding variables and accommodates excessive zero observations; and it incorporates taxonomic information. Simulation studies and real data analyses demonstrate substantial power gain over competing methods. </p>
-							    <p> Download miLineage (include a zipped file for the R package, a manual, and a tutorial ) </p>
-							</section>
 
 						</div>
 					</div>
