--- a/people.html
+++ b/people.html
@@ -40,19 +40,12 @@
 					<div class="row main-row">
 						<div class="12u">
 
-						<h2>Software</h2>
+						<h2>People</h2>
 						
-							<section>
-								<p><strong>miLineage</strong> </p>
-								<p> miLineage package has functions that implement the distribution-free association tests for microbiome data described in Tang et al. (2016). These functions allow users to: (a) perform robust association tests at any taxonomic level for microbiome data that exhibit arbitrary inter-taxa correlation; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community. Our framework does not make any distributional assumptions on the microbiome data; it allows for the adjustment of confounding variables and accommodates excessive zero observations; and it incorporates taxonomic information. Simulation studies and real data analyses demonstrate substantial power gain over competing methods. </p>
-							    <p> Download miLineage (include a zipped file for the R package, a manual, and a tutorial ) </p>
-							</section>
-							
-							<section>
-								<p><strong>miLineage</strong> </p>
-								<p> miLineage package has functions that implement the distribution-free association tests for microbiome data described in Tang et al. (2016). These functions allow users to: (a) perform robust association tests at any taxonomic level for microbiome data that exhibit arbitrary inter-taxa correlation; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community. Our framework does not make any distributional assumptions on the microbiome data; it allows for the adjustment of confounding variables and accommodates excessive zero observations; and it incorporates taxonomic information. Simulation studies and real data analyses demonstrate substantial power gain over competing methods. </p>
-							    <p> Download miLineage (include a zipped file for the R package, a manual, and a tutorial ) </p>
-							</section>
+					<a href="#"><img src="images/PI.jpg" alt="" class="left" width="275" /></a>
+					<h3>ZhengZheng (Jane) Tang</h3>
+					<p> ZhengZheng is an assistant professor in the Department of Biostatistics and Medical Informatics at the University of Wisconsin-Madison as well as an investigator at the Wisconsin Discovery Institute.  </p>
+                                        <p> ZhengZheng's contact information can be found at the bottom of the page. </p>
 
 						</div>
 					</div>
