--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
 
 							<section>
 								<h2>Welcome!</h2>
-								<p> ZhengZheng (Jane) Tang is an Assistant Professor at the University of Wisconsin-Madison and Wisconsin Discovery Institute. </p>
-
-								<p> Dr. Tang's research focuses on the development and application of statistical methods and computational tools for high-dimensional "omics" data, arising from modern high-throughput technologies. The current research in Tang's group has focused on developing novel methods for gene-based association analysis, meta-analysis for sequencing studies, integration of genomics with electronic medical records, and the analysis of microbiome & metagenomic data.</p>
+								<p> Our group focuses on the development and application of statistical methods and computational tools for high-dimensional "omics" data, arising from modern high-throughput technologies. Our current research interests include developing novel methods for gene-based association analysis, meta-analysis for sequencing studies, integration of genomics with electronic medical records, and the analysis of microbiome & metagenomic data.</p>
 							</section>
 
 						</div>
