--- a/people.html
+++ b/people.html
@@ -42,7 +42,7 @@
 
 						<h2>People</h2>
 						
-					<a href="#"><img src="images/PI.jpg" alt="" class="left" width="275" /></a>
+					<img src="images/PI.JPG" alt="" class="left" width="275" />
 					<h3>ZhengZheng (Jane) Tang</h3>
 					<p> ZhengZheng is an assistant professor in the Department of Biostatistics and Medical Informatics at the University of Wisconsin-Madison as well as an investigator at the Wisconsin Discovery Institute.  </p>
                                         <p> ZhengZheng's contact information can be found at the bottom of the page. </p>
