--- a/publications.html
+++ b/publications.html
@@ -41,8 +41,10 @@
 						<div class="12u">
 
 						<h2>Publications</h2>
-						
-<p><strong>Tang ZZ</strong>, Bunn P,&nbsp;Tao R, Liu Z, Lin DY (2017). PreMeta: a tool to facilitate meta-analysis of rare-variant associations. <em>BMC Genomics</em>.&nbsp;accepted.</p>
+				
+<p>PreMeta: a tool to facilitate meta-analysis of rare-variant associations.</p>
+<p><strong>Tang ZZ</strong>, Bunn P,&nbsp;Tao R, Liu Z, Lin DY (2017).</p>  
+<p><em>BMC Genomics</em>.&nbsp;accepted.</p>
 
 <p><strong>Tang ZZ</strong>, Chen G, Alekseyenko AV, Li H (2016). A general framework for association analysis of microbial communities on a taxonomic tree. <em>Bioinformatics</em>. btw804.</p>
 
