--- a/publications.html
+++ b/publications.html
@@ -42,9 +42,9 @@
 
 						<h2>Publications</h2>
 				
-<p>PreMeta: a tool to facilitate meta-analysis of rare-variant associations.</p>
-<p><strong>Tang ZZ</strong>, Bunn P,&nbsp;Tao R, Liu Z, Lin DY (2017).</p>  
-<p><em>BMC Genomics</em>.&nbsp;accepted.</p>
+<p><li><a href="https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-017-3573-1"><strong>PreMeta: a tool to facilitate meta-analysis of rare-variant associations.</strong></a></li><br>
+<strong>Tang ZZ</strong>, Bunn P,&nbsp;Tao R, Liu Z, Lin DY (2017).<br>
+<em>BMC Genomics</em>.&nbsp;DOI: 10.1186/s12864-017-3573-1.</p>
 
 <p><strong>Tang ZZ</strong>, Chen G, Alekseyenko AV, Li H (2016). A general framework for association analysis of microbial communities on a taxonomic tree. <em>Bioinformatics</em>. btw804.</p>
 
