--- a/publications.html
+++ b/publications.html
@@ -42,7 +42,7 @@
 
 						<h2>Publications</h2>
 				
-<p><li><a href="https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-017-3573-1"><strong>PreMeta: a tool to facilitate meta-analysis of rare-variant associations.</strong></a></li><br>
+<p><a href="https://bmcgenomics.biomedcentral.com/articles/10.1186/s12864-017-3573-1"><strong>PreMeta: a tool to facilitate meta-analysis of rare-variant associations.</strong></a><br>
 <strong>Tang ZZ</strong>, Bunn P,&nbsp;Tao R, Liu Z, Lin DY (2017).<br>
 <em>BMC Genomics</em>.&nbsp;DOI: 10.1186/s12864-017-3573-1.</p>
 
