--- a/publications.html
+++ b/publications.html
@@ -46,42 +46,61 @@
 <strong>Tang ZZ</strong>, Bunn P,&nbsp;Tao R, Liu Z, Lin DY (2017).<br>
 <em>BMC Genomics</em>.&nbsp;DOI: 10.1186/s12864-017-3573-1.</p>
 
-<p><strong>Tang ZZ</strong>, Chen G, Alekseyenko AV, Li H (2016). A general framework for association analysis of microbial communities on a taxonomic tree. <em>Bioinformatics</em>. btw804.</p>
+<p><a href="https://academic.oup.com//bioinformatics/article/33/9/1278/2729907/A-general-framework-for-association-analysis-of?guestAccessKey=6c701407-b46c-49b1-a4d3-852545eeeead"><strong>A general framework for association analysis of microbial communities on a taxonomic tree.</strong></a><br>
+<strong>Tang ZZ</strong>, Chen G, Alekseyenko AV, Li H (2016).<br>
+<em>Bioinformatics</em>. btw804.</p>
 
-<p><strong>Tang ZZ</strong>,&nbsp;Chen G,&nbsp;Alekseyenko&nbsp;AV&nbsp;(2016). PERMANOVA-S:&nbsp;Association test for microbial community composition that accommodates confounders and multiple distances, <em>Bioinformatics</em>, btw311.</p>
+<p><a href="https://academic.oup.com/bioinformatics/article/32/17/2618/2450751/PERMANOVA-S-association-test-for-microbial?searchresult=1"><strong>PERMANOVA-S:&nbsp;Association test for microbial community composition that accommodates confounders and multiple distances.</strong></a><br>
+<strong>Tang ZZ</strong>,&nbsp;Chen G,&nbsp;Alekseyenko&nbsp;AV&nbsp;(2016).<br>  
+<em>Bioinformatics</em>, btw311.</p>
 
-<p><strong>Tang ZZ</strong>, Lin DY (2015). Meta-analysis for discovering rare-variant&nbsp;associations: statistical methods and software programs,&nbsp;<em>American Journal of Human Genetics</em>, 97, 35-53.</p>
+<p><a href="http://www.sciencedirect.com/science/article/pii/S000292971500186X?via%3Dihub"><strong>Meta-analysis for discovering rare-variant&nbsp;associations: statistical methods and software programs.</strong></a><br>
+<strong>Tang ZZ</strong>, Lin DY (2015).<br>   
+<em>American Journal of Human Genetics</em>, 97, 35-53.</p>
 
-<p>Stitziel NO, Won HH, Morrison AC, Peloso GM, Do R, ..., <strong>Tang ZZ</strong>, ..., Kathiresan S (2014)<br />
-Inactivating mutations in NPC1L1 and protection from coronary heart disease.&nbsp;<em>New England Journal of Medicine</em>,&nbsp;371(22):2072-2082.</p>
+<p><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4335708/"><strong>Inactivating mutations in NPC1L1 and protection from coronary heart disease.</strong></a><br>
+Stitziel NO, Won HH, Morrison AC, Peloso GM, Do R, ..., <strong>Tang ZZ</strong>, ..., Kathiresan S (2014).<br>
+<em>New England Journal of Medicine</em>,&nbsp;371(22):2072-2082.</p>
 
-<p><strong>Tang ZZ</strong>, Lin DY (2014). Meta-analysis of sequencing studies with heterogeneous genetic associations,&nbsp;<em>Genetic Epidemiology</em>,&nbsp;38(5):389-401.</p>
+<p><a href="https://www.ncbi.nlm.nih.gov/pubmed/24799183"><strong>Meta-analysis of sequencing studies with heterogeneous genetic associations.</strong></a><br>
+<strong>Tang ZZ</strong>, Lin DY (2014).<br>
+<em>Genetic Epidemiology</em>,&nbsp;38(5):389-401.</p>
 
-<p><br />
-Crosby J, Peloso GM, Auer PL, Crosslin D, Stitziel NO, Lange LA, Lu K,&nbsp;<strong>Tang ZZ</strong>, ..., Reiner AP, Boerwinkle E, Kathiresan S (2014). Rare loss-of-function mutations in the APOC3 gene, plasma triglycerides, and risk for coronary heart disease,&nbsp;<em>New England Journal of Medicine</em>, 235(2):e30-e31.</p>
+<p><a href="http://www.nejm.org/doi/full/10.1056/NEJMoa1307095"><strong>Rare loss-of-function mutations in the APOC3 gene, plasma triglycerides, and risk for coronary heart disease.</strong></a><br> 
+Crosby J, Peloso GM, Auer PL, Crosslin D, Stitziel NO, Lange LA, Lu K,<strong>Tang ZZ</strong>, ..., Reiner AP, Boerwinkle E, Kathiresan S (2014).<br>
+<em>New England Journal of Medicine</em>, 235(2):e30-e31.</p>
 
-<p><br />
-Lange LA, Hu Y, Zhang H, Xue C, Schmidt EM,&nbsp;<strong>Tang ZZ</strong>, ..., Willer CJ (2014). Novel rare and low frequency coding variants associated with LDL cholesterol,&nbsp;<em>American Journal of Human Genetics</em>, 94, 233-245.</p>
+<p><a href="http://www.nejm.org/doi/full/10.1056/NEJMoa1307095"><strong>Novel rare and low frequency coding variants associated with LDL cholesterol.</strong></a><br> 
+Lange LA, Hu Y, Zhang H, Xue C, Schmidt EM,<strong>Tang ZZ</strong>, ..., Willer CJ (2014). <br>
+<em>American Journal of Human Genetics</em>, 94, 233-245.</p>
 
-<p><br />
-<strong>Tang ZZ</strong>, Lin DY (2013). MASS: meta-analysis of score statistics for sequencing studies,&nbsp;<em>Bioinformatics</em>, 29, 1803-1805.</p>
+<p><a href="https://academic.oup.com/bioinformatics/article-lookup/doi/10.1093/bioinformatics/btt280"><strong>MASS: meta-analysis of score statistics for sequencing studies.</strong></a><br> 
+<strong>Tang ZZ</strong>, Lin DY (2013).<br> 
+<em>Bioinformatics</em>, 29, 1803-1805.</p>
 
-<p><br />
-Lin DY, Zeng D,&nbsp;<strong>Tang ZZ</strong>&nbsp;(2013). Quantitative trait analysis in sequencing studies under trait-dependent sampling,&nbsp;<em>Proceedings of the National Academy of Sciences of the United States of America</em>, 110, 12247&ndash;12252</p>
+<p><a href="http://www.pnas.org/content/110/30/12247.full"><strong>Quantitative trait analysis in sequencing studies under trait-dependent sampling</strong></a><br>
+Lin DY, Zeng D,<strong>Tang ZZ</strong> (2013). <br>
+<em>Proceedings of the National Academy of Sciences of the United States of America</em>, 110, 12247;12252</p>
 
-<p>Nelson MR, Wegmann D, Ehm MG, Kessner D, Jean PS, Verzilli C, Shen J,&nbsp;<strong>Tang Z</strong>, ..., Novembre J, Mooser V (2012). An abundance of rare functional variants in 202 drug target genes sequenced in 14,002 people,&nbsp;<em>Science</em>, 337, 100-104.</p>
+<p><a href="http://science.sciencemag.org/content/337/6090/100"><strong>An abundance of rare functional variants in 202 drug target genes sequenced in 14,002 people.</strong></a><br>
+Nelson MR, Wegmann D, Ehm MG, Kessner D, Jean PS, Verzilli C, Shen J,<strong>Tang Z</strong>, ..., Novembre J, Mooser V (2012).<br>
+<em>Science</em>, 337, 100-104.</p>
 
-<p><br />
-Yang EY, Chambless L, Sharrett AR, Virani SS, Liu X,&nbsp;<strong>Tang Z</strong>, Boerwinkle E, Ballantyne CM, Nambi V (2012). Carotid arterial wall characteristics are associated with incident ischemic stroke but not coronary heart disease in the Atherosclerosis Risk in Communities (ARIC) study,&nbsp;<em>Stroke</em>, 43, 103-108.</p>
+<p><a href="http://stroke.ahajournals.org/content/43/1/103"><strong>Carotid arterial wall characteristics are associated with incident ischemic stroke but not coronary heart disease in the Atherosclerosis Risk in Communities (ARIC) study.</strong></a><br>
+Yang EY, Chambless L, Sharrett AR, Virani SS, Liu X,<strong>Tang Z</strong>, Boerwinkle E, Ballantyne CM, Nambi V (2012). <br>
+<em>Stroke</em>, 43, 103-108.</p>
 
-<p><br />
-Lin DY,&nbsp;<strong>Tang ZZ</strong>&nbsp;(2011). A general framework for detecting disease associations with rare variants in sequencing studies,&nbsp;<em>American Journal of Human Genetics</em>, 89, 354-367.</p>
+<p><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3169821/"><strong> A general framework for detecting disease associations with rare variants in sequencing studies.</strong></a><br>
+Lin DY,<strong>Tang ZZ</strong> (2011). <br>
+<em>American Journal of Human Genetics</em>, 89, 354-367.</p>
 
-<p><br />
-Yang EY, Nambi V,&nbsp;<strong>Tang Z</strong>, Virani SS, Boerwinkle E, Hoogeveen RC, Astor BC, Mosley TH, Coresh J, Chambless L, Ballantyne CM (2009). Clinical implications of JUPITER (Justification for the Use of statins in Prevention: an Intervention Trial Evaluating Rosuvastatin) in a U.S. population insights from the ARIC (Atherosclerosis Risk in Communities) study,&nbsp;<em>Journal of the American College of Cardiology</em>, 54, 2388-2395.</p>
+<p><a href="http://www.sciencedirect.com/science/article/pii/S0735109709033701?via%3Dihub"><strong> Clinical implications of JUPITER (Justification for the Use of statins in Prevention: an Intervention Trial Evaluating Rosuvastatin) in a U.S. population insights from the ARIC (Atherosclerosis Risk in Communities) study.</strong></a><br>
+Yang EY, Nambi V, <strong>Tang Z</strong>, Virani SS, Boerwinkle E, Hoogeveen RC, Astor BC, Mosley TH, Coresh J, Chambless L, Ballantyne CM (2009). <br>
+<em>Journal of the American College of Cardiology</em>, 54, 2388-2395.</p>
 
-<p><br />
-Sun W, Wright FA,&nbsp;<strong>Tang Z</strong>, Nordgard SH, Van Loo P, Yu T, Kristensen VN, Perou CM (2009). Integrated study of copy number states and genotype calls using high-density SNP arrays,&nbsp;<em>Nucleic Acids Research</em>, 37, 5365-5377</p>
+<p><a href="https://academic.oup.com/nar/article-lookup/doi/10.1093/nar/gkp493"><strong> Integrated study of copy number states and genotype calls using high-density SNP arrays.</strong></a><br>
+Sun W, Wright FA, <strong>Tang Z</strong>, Nordgard SH, Van Loo P, Yu T, Kristensen VN, Perou CM (2009). <br>
+<em>Nucleic Acids Research</em>, 37, 5365-5377</p>
 
 
 						</div>
