--- a/research.html
+++ b/research.html
@@ -40,10 +40,10 @@
 					<div class="row main-row">
 					<div class="12u">
 						<h2>Whole-Genome Sequencing and Functional Genomics</h2>
-						<figure>
-    						<img src="images/research_WGS.jpg" alt="" class="left" width="500" />
-    						<figcaption>Figure from https://www.genome.gov/27561317/genomics-of-gene-regulation/</figcaption>
-						</figure>
+						<div id="images">
+						<img src="images/research_WGS.jpg" alt="" class="left" width="500" />
+						<div class="caption">Figure from https://www.genome.gov/27561317/genomics-of-gene-regulation/</div>
+						</div>
 						<p> Elucidating the genetic basis of complex diseases has broadened our understanding of the underlying disease
 mechanisms and has revealed new preventive, diagnostic, and therapeutic approaches. Indeed, we have
 benefited from an unprecedented number of advancements linking genome variations to complex diseases. Today’s
