--- a/research.html
+++ b/research.html
@@ -40,16 +40,14 @@
 					<div class="row main-row">
 					<div class="12u">
 						<h2>Whole-Genome Sequencing and Functional Genomics</h2>
-						<div id="images">
 						<img src="images/research_WGS.jpg" alt="" class="left" width="500" />
-						<div class="caption">Figure from https://www.genome.gov/27561317/genomics-of-gene-regulation/</div>
-						</div>
 						<p> Elucidating the genetic basis of complex diseases has broadened our understanding of the underlying disease
 mechanisms and has revealed new preventive, diagnostic, and therapeutic approaches. Indeed, we have
 benefited from an unprecedented number of advancements linking genome variations to complex diseases. Today’s
 availability of rich genomic data (e.g. transcriptome data, whole-genome sequencing, and EHR-linked
 biobanks) provide great opportunities for further discoveries, and, more importantly, translating these discoveries
 into knowledge of disease etiology. </p>
+<p> Figure from https://www.genome.gov/27561317/genomics-of-gene-regulation/ </p>
 
 					</div>
 					</div>
@@ -67,7 +65,7 @@ elucidate the role of the microbiome in complex disease development, progression
 These findings suggest an exciting opportunity to develop new preventive and therapeutic strategies, and to advance
 precision in disease diagnosis, risk stratification, and treatment decision-making. </p>
 							
-
+<p> Figure from https://www.scientificamerican.com/article/how-gut-bacteria-help-make-us-fat-and-thin/ </p>
 						</div>
 					</div>
 				</div>
