--- a/research.html
+++ b/research.html
@@ -65,10 +65,10 @@ enormously. These studies discover links between communities of microbes and man
 elucidate the role of the microbiome in complex disease development, progression, and treatment responses.
 These findings suggest an exciting opportunity to develop new preventive and therapeutic strategies, and to advance
 precision in disease diagnosis, risk stratification, and treatment decision-making. </p>
-							
+<p><font size="6">Figure from https://www.scientificamerican.com/article/how-gut-bacteria-help-make-us-fat-and-thin/</font></p>							
 
 						</div>
-						<p> <sup>Figure from https://www.scientificamerican.com/article/how-gut-bacteria-help-make-us-fat-and-thin/</sup> </p>
+						
 					</div>
 				</div>
 			</div>
