--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 							<section>
 								<h2>Welcome!</h2>
-								<p> Our group focuses on the development and application of statistical methods and computational tools for high-dimensional "omics" data, arising from modern high-throughput technologies. Our current research interests include developing novel methods for gene-based association analysis, meta-analysis for sequencing studies, integration of genomics with electronic medical records, and the analysis of microbiome & metagenomic data.</p>
+								<p> Our group focuses on the development and application of statistical methods and computational tools for high-dimensional "omics" data, arising from modern high-throughput technologies. Our current research interests include developing novel methods for integrating functional information in genetic association studies, meta-analysis for sequencing studies, and analysis of microbiome & metagenomic data.</p>
 							</section>
 
 						</div>
