--- a/software.html
+++ b/software.html
@@ -41,13 +41,11 @@
 						<div class="12u">
 
 						<h2>Software</h2>
-						<p>miLineage: An R package&nbsp;to perform&nbsp;association tests for microbial&nbsp;lineages&nbsp;on a taxonomic tree</p>
+						
+<strong>miLineage: An R package to perform association tests for microbial lineages on a taxonomic tree <strong><br>
+miLineage package has functions that implement the distribution-free association tests for microbiome data described in Tang et al. (2016). These functions allow users to: (a) perform robust association tests at any taxonomic level for microbiome data that exhibit arbitrary inter-taxa correlation; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community. Our framework does not make any distributional assumptions on the microbiome data; it allows for the adjustment of confounding variables and accommodates excessive zero observations; and it incorporates taxonomic information. Simulation studies and real data analyses demonstrate substantial power gain over competing methods. <br>
+<strong>References:</strong> Tang ZZ <i>et al.</i> (2016).</p>
 
-<p>https://medschool.vanderbilt.edu/tang-lab/software/miLineage</p>
-
-<p>citation: Tang ZZ, Chen G, Alekseyenko AV, Li H (2016). A general framework for association analysis of microbial communities on a taxonomic tree.&nbsp;Bioinformatics. btw804.</p>
-
-<p>&nbsp;</p>
 
 <p>miProfile: A C program for analyzing&nbsp;microbial community composition</p>
 
