--- a/software.html
+++ b/software.html
@@ -42,10 +42,12 @@
 
 						<h2>Software</h2>
 						
-<p><strong>miLineage: An R package to perform association tests for microbial lineages on a taxonomic tree <strong><br>
-miLineage package has functions that implement the distribution-free association tests for microbiome data described in Tang et al. (2016). These functions allow users to: (a) perform robust association tests at any taxonomic level for microbiome data that exhibit arbitrary inter-taxa correlation; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community. Our framework does not make any distributional assumptions on the microbiome data; it allows for the adjustment of confounding variables and accommodates excessive zero observations; and it incorporates taxonomic information. Simulation studies and real data analyses demonstrate substantial power gain over competing methods. <br>
-<strong>References:</strong> <a href="https://academic.oup.com//bioinformatics/article/33/9/1278/2729907/A-general-framework-for-association-analysis-of?guestAccessKey=6c701407-b46c-49b1-a4d3-852545eeeead">Tang ZZ <i>et al.</i> 2016b </a>.</p>
-
+<p><strong>miLineage: An R package to perform association tests for microbial lineages on a taxonomic tree </strong></p>
+<p>miLineage package has functions that implement the distribution-free association tests for microbiome data described in Tang et al. (2016). These functions allow users to: (a) perform robust association tests at any taxonomic level for microbiome data that exhibit arbitrary inter-taxa correlation; (b) localize the covariate-associated lineages on the taxonomic tree; and (c) assess the overall association of the microbial community. Our framework does not make any distributional assumptions on the microbiome data; it allows for the adjustment of confounding variables and accommodates excessive zero observations; and it incorporates taxonomic information. Simulation studies and real data analyses demonstrate substantial power gain over competing methods. </p>
+<p><strong>References:</strong><a href="https://academic.oup.com//bioinformatics/article/33/9/1278/2729907/A-general-framework-for-association-analysis-of?guestAccessKey=6c701407-b46c-49b1-a4d3-852545eeeead">Tang ZZ <i>et al.</i> 2016b </a>.</p>
+<footer class="controls">
+<a href=# class="button">Download miLineage</a>
+</footer>
 
 <p>miProfile: A C program for analyzing&nbsp;microbial community composition</p>
 
